jhj 기타 요소들 및 포트폴리오 메인 완료

--- a/src/assets/styles/component/_avatar-thumbnail.scss
+++ b/src/assets/styles/component/_avatar-thumbnail.scss
@@ -128,6 +128,7 @@
 
     &:last-child{
       margin-right: 0;
+      padding-right: 0;
 
       &:after{
         content: '';
@@ -143,7 +144,9 @@
   display: inline-flex;
 
   .avatar{
-    margin: 0 auto 10px;
+    @include circle(70px);
+
+    margin: 0 auto 16px;
   }
 
   .name-grp{
@@ -151,12 +154,21 @@
   }
 
   .name{
+    @include ellipse(1, 18px);
+    @include font-op($w: 400, $c: #171820){
+      font-size: 16px;
+    }
+    
     width: 100%;
   }
 
   .name-subtxt-grp{
     margin-top: 2.5px;
     font-size: 11px;
+  }
+
+  .name-subtxt-list{
+    font-size: 12px;
   }
 }
 
