--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -496,10 +496,16 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin-bottom: 20px;
     font-size: rem(18);
     font-weight: 500;
     color: #5C5E70;
+    
+    .flex-ttl {
+      display: flex;
+      align-items: center;
+    }
 
     .check-wrap {
       margin-right: 8px;
@@ -507,10 +513,6 @@
 
     .hover-desc {
       margin-left: 8px;
-    }
-
-    .badge {
-      @include absolute($t: 0, $r: 0);
     }
   }
 
