--- a/src/assets/styles/component/_form.scss
+++ b/src/assets/styles/component/_form.scss
@@ -166,6 +166,16 @@ textarea.inp{ // 구성요소: 텍스트에어리어 기본 스타일
   font-weight: 400;
   color: #171820;
   display: inline-block;
+
+  .length-unit{
+    margin-left: auto;
+  }
+}
+
+.lbel-unit{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .lbel-lg{ // 구성요소: 기본레이블 큰버전
@@ -386,7 +396,7 @@ textarea.inp{ // 구성요소: 텍스트에어리어 기본 스타일
     }
 
     -webkit-text-stroke: 1px #171820;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     text-align: left;
   }
 
