jhj double-centered 로 변경

--- a/src/assets/styles/page/_mypage-note.scss
+++ b/src/assets/styles/page/_mypage-note.scss
@@ -65,8 +65,7 @@
     padding-bottom: 25px;
   }
 
-  .nboard-btn-grp{
-    max-width: 380px;
+  .btn-grp[position="double-centered"]{
     margin: 35px auto 0;
   }
 }
