jhj 페이지네이션 common-card 안에 있으면 margin-bottom 없음

--- a/src/assets/styles/layout/_mypage.scss
+++ b/src/assets/styles/layout/_mypage.scss
@@ -232,6 +232,10 @@
     margin-top: 70px;
     margin-bottom: 100px;
   }
+
+  .mypage-common-card .pagination{
+    margin-bottom: 0;
+  }
 }
 
 .mypage-white-container{ // 우측컨텐츠 배경 하얀색일 때
