cgs - 스타트업) 대시보드

--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -35,6 +35,7 @@
 @import "page/main";
 @import "page/search-result";
 @import "page/etpr-profile"; // 기업 프로필
+@import "page/_mypage-dashboard"; // 내 정보
 @import "page/_mypage-my-info"; // 내 정보
 @import "page/mypage-enterprise-info"; // 기업 정보
 @import "page/mypage-factcheck"; // 팩트체크
