cgs - 스타트업) 관심투자자목록

--- a/src/assets/styles/page/_mypage-dashboard.scss
+++ b/src/assets/styles/page/_mypage-dashboard.scss
@@ -35,6 +35,10 @@
   .big-ttl-grp {
     margin-bottom: 30px;
 
+    &.mb-add {
+      margin-bottom: 65px;
+    }
+
     .cont-big-ttl {
       font-size: rem(25);
       font-weight: 500;
