--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -552,6 +552,10 @@
     margin-top: 5px;
     line-height: 1.4;
   }
+
+  [position="single-centered"]{
+    margin-top: 45px;
+  }
 }
 
 .toggle-item{ // 구성요소: label + toggle
