--- a/src/assets/styles/page/_mypage-enterprise-info.scss
+++ b/src/assets/styles/page/_mypage-enterprise-info.scss
@@ -335,6 +335,14 @@
     flex-basis: 28%;
   }
 
+  .flex-basis-38 {
+    flex-basis: 38%;
+  }
+
+  .flex-basis-61 {
+    flex-basis: 61%;
+  }
+
   .flex-basis-76 {
     flex-basis: 76%;
   }
