--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -19,6 +19,7 @@
 @import "component/button";
 @import "component/form";
 @import "component/board";
+@import "component/loader";
 
 // 5. layout
 @import "layout/header";
