--- a/src/assets/styles/page/_mypage-factcheck.scss
+++ b/src/assets/styles/page/_mypage-factcheck.scss
@@ -207,7 +207,7 @@
   }
 }
 
-/* 투자자: 마이페이지 > 팩트체크 > 요청한 팩트체크 상세 */
+/* 투자자: 마이페이지 > 팩트체크 > 요청한 팩트체크 상세 (대기중, 진행중) */
 .ftck-ing-wrap{ // 구성요소: 진행중일 때 보이는 영역
   margin-top: 30px;
   
@@ -266,5 +266,17 @@
   }
 }
 
+/* 투자자: 마이페이지 > 팩트체크 > 요청한 팩트체크 상세 (검토중, 완료) */
+.mypage-ftck-checking-detail-page{
+  .mypboard-cont{
+    &:last-of-type{
+      border-bottom: 0;
+    }
+  }
+
+  .guide-box{
+    margin: 0;
+  }
+}
 
 /* ========== END 마이페이지 > 팩트체크 ========== */
