cgs - 팩트체커) 기업회원등록상세 작업중

--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -43,3 +43,4 @@
 @import "page/mypage-point"; // 포인트
 @import "page/mypage-note"; // 쪽지함
 @import "page/mypage-portfolio"; // 포트폴리오
+@import "page/mypage-enroll"; // 기업회원 등록
