cgs - 팩트체커) 기업회원 등록 상세

--- a/src/assets/styles/component/_card.scss
+++ b/src/assets/styles/component/_card.scss
@@ -64,6 +64,10 @@
   max-width: 410px;
 }
 
+.card-thumb-max{
+  max-width: 535px;
+}
+
 .card-subtxt-grp{
   @include font-op($c: #5c5e70){
     font-size: 12px;
