jhj 팩트체커 전체 팩트체크 상세 완료

--- a/src/assets/styles/component/_board.scss
+++ b/src/assets/styles/component/_board.scss
@@ -122,6 +122,10 @@
   .td-word-writer{
     font-size: 13px;
     color: #8e909f;
+
+    .icon-gt {
+      margin: -2px 2px 0;
+    }
   }
 
   .td-word-date{
