--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -184,4 +184,16 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='2' viewBox='0 0 10 2'%3E%3Cline id='선_1064' data-name='선 1064' x2='10' transform='translate(0 1)' fill='none' stroke='%23707070' stroke-width='2'/%3E%3C/svg%3E%0A");
 }
 
+.icon-gt { // gt: greater >
+  width: 10px;
+  height: 11px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6.591' height='11.061' viewBox='0 0 6.591 11.061'%3E%3Cpath id='icon-rqst' d='M1276.24,1414.137l5,5-5,5' transform='translate(-1275.71 -1413.606)' fill='none' stroke='%235c5e70' stroke-width='1.5'/%3E%3C/svg%3E%0A");
+}
+
+.icon-gt-white { // gt: greater >
+  width: 15px;
+  height: 15px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='15' viewBox='0 0 15 15'%3E%3Cg id='icon-write-arrow' transform='translate(0 -1)'%3E%3Cg id='사각형_2240' data-name='사각형 2240' transform='translate(0 1)' fill='%23fff' stroke='%23707070' stroke-width='1' opacity='0'%3E%3Crect width='15' height='15' stroke='none'/%3E%3Crect x='0.5' y='0.5' width='14' height='14' fill='none'/%3E%3C/g%3E%3Cpath id='icon-pg-nxt' d='M-19274.734-7922.715l6.379,6.378-6.379,6.378' transform='translate(19279.047 7925.215)' fill='none' stroke='%23fff' stroke-width='2'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
 /* ========== END icon 관련 스타일 ========== */
