--- a/src/assets/styles/layout/_mypage.scss
+++ b/src/assets/styles/layout/_mypage.scss
@@ -359,6 +359,10 @@
     margin-left: auto;
     flex-shrink: 0;
     padding-left: 15px;
+        
+    .icon-gt {
+      margin: -2px 2px 0;
+    } 
   }
 }
 
