--- a/src/assets/styles/page/_mypage-factcheck.scss
+++ b/src/assets/styles/page/_mypage-factcheck.scss
@@ -310,4 +310,17 @@
   }
 }
 
+/* 팩트체커: 마이페이지 > 팩트체크 > 전체 팩트체크 상세 */
+.mypage-ftck-total-detail-page{
+  .mypboard-cont{
+    &:last-of-type{
+      border-bottom: 0;
+    }
+  }
+
+  .colored-ment-box{
+    margin-top: 70px;
+  }
+}
+
 /* ========== END 마이페이지 > 팩트체크 ========== */
