--- a/src/assets/styles/page/_mypage-factcheck.scss
+++ b/src/assets/styles/page/_mypage-factcheck.scss
@@ -286,28 +286,13 @@
     margin-bottom: 10px;
   }
 
-  .form-ttl{
-    @include font-op($w: 600, $c: #171820){
-      font-size: 16px;
-    }
-
-    margin-bottom: 20px;
-  }
-
-  .form-item{
-    margin: 10px 0;
-
-    &:last-child{
-      margin-bottom: 0;
-    }
-  }
-
   .custom-slct{
     max-width: 305px;
   }
 
-  .ftck-detail-wrap{
-    padding-bottom: 40px;
+  [position="double-centered"]{
+    margin-top: 40px;
+    margin-bottom: 10px;
   }
 }
 
@@ -330,6 +315,26 @@
 
   .colored-ment-box{
     margin-top: 70px;
+  }
+}
+
+/* 팩트체커: 마이페이지 > 팩트체크 > 팩트체크 작성 */
+.mypage-ftck-create-page{
+  .mypage-ftck-container{
+    margin: 10px 0;
+  }
+
+  .big-ttl-avatar-hd{
+    margin-bottom: 30px;
+  }
+
+  .add-btn{
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  [position="single-centered"]{
+    margin-top: 20px;
   }
 }
 
